resources/default-theme/basic.css
/* Global rules */

html {
        min-width: 600px; 
}

p { 
	margin-top:1em; 
	
}

body, div, td, th, h1, h2, h3, h4 { /* redundant rules for bad browsers  */  
        font-family: Arial, Helvetica, sans-serif;
        voice-family: "\"}\"";
        voice-family: inherit;
	color: black;
}  

.clearhack {
        /* Clears Box Model Hack in IE5 */
        display: inline;
} 

.clear:after {
   content: "."; 
   display: block; 
   height: 0; 
   clear: both; 
   visibility: hidden;
}

body {
        margin: 0px;
	padding: 0px;
	border-collapse: collapse;	
}


form {
        margin:0; padding:0;
}

pre {
        margin-top: 0px;
        padding-top: 0px;
}

div.body {
	padding: 15px 20px 0 20px; 
}

div#main { 
	clear: both;
        border: solid #999 1px;
        /* width: 50em;  optional width to set a size to main body text area */
}

#contents { 
        height: 1%; /* Prevent preview iframe from breaking in IE (width: 100%) )*/
        padding: 0.75em; 
        min-height: 50px;
}

ul.listMenu {
        list-style-type: none;
}

ul.listMenu li {
        display: inline;
}

/* Error messages */

div.error { 
        padding: 1em 1.0em; 
        min-height: 100px;
}

div.error h1.errorHeader { 
        font-size: 100%;
        background: #efefef url(alert.png) no-repeat 5px 5px;
        padding-top: 10px;
        padding-left: 35px;
        height: 40px;
}

div.error p.errorMessage { 
        font-size: 90%;
}

div.error div.exception h2 { 
        font-size: 90%;
}

div.error div.exception { 
        font-size: 90%;
}

div.error div.exception ul.stacktrace {
        font-size: 80%;
        font-family: monospace;
        list-style-type: none;
        margin-top: 0px;
        margin-bottom: 10px;
        margin-left: 0px;
        margin-right: 0px;
        padding-left: 0px;
}

p.errormessage { 
        font-size: 100%;
        background: url(alert.png) no-repeat 0px 0px;
        font-weight: bold;
        color: red;
        padding-top: 5px;
        padding-left: 32px;
}

div.infomessage { 
        font-size: 120%;
        font-weight: bold;
        padding: 5px 0px 5px 0px;
        border: 2px dotted #CCCCCC;
        color: #333;
        text-align: center;
        margin-bottom: 5px;
}

div.webdavmessage { 
        font-size: 110%;
        padding: 10px;
        text-align: left;
        margin-bottom: 5px;
}

ul.errors { 
	padding: 0 0 7px 0;
	margin: 0;
        list-style-type: none;
        color: red;
}

/* Banner section: */

div.banner {
        width: 100%;
        height: 3.4em;
        vertical-align: middle;
        border-bottom: solid 2px; 
        border-color: #9C9A9C;
}

* html div.banner div.text{
   margin: 7px 10px;
}

* html div.banner div.menu{
   margin: 20px 10px;
}

div.banner div.text{
        margin: 7px 20px;
        float:left;
        color: #9C9A9C;
        font-size: 90%;
}

div.banner div.text span.hostname {
        font-size: 140%;
        display: block;    
        color: #696769;         
}

div.banner div.menu {
        margin: 20px;
        float:right;
        font-size: 80%;                     
}

div.banner div.menu span.principal {
        margin-left: 15px;
        padding-right: 15px;
        background: transparent url(person.gif) no-repeat 1% 50%;

}

div.banner div.menu span.principal span.name {
        padding-left: 20px;
}



/* Breadcrumb rules: */

div.breadcrumb {
    margin-top: 0px;
    margin-bottom: 10px;
    font-size: 80%;
    background: whitesmoke;
    padding: 3px 3px 3px 7px;
}


div.breadcrumb ul {
        padding-left: 0px;
        display: inline;
}

div.breadcrumb li {
        display: inline;
}


/* Start resource title section: */

div#titleContainer { 
	padding-bottom: 1.4em;
}
 
div.resource-title {
    	background: transparent url(file.png) no-repeat 0px 5px;
        height: 30px;
        padding-top: 8px;
}

div.resource-title h1 {
        max-width: 50%; /* To prevent box from extending all the way and cause wrapping */
        padding-right: 5px;
	float:left;
        display: inline;
    	font-size: 135%;
    	font-weight: bold;
    	margin: 0 0 0 30px;
}

div.collection {
        background: transparent url(dir.png) no-repeat 0px 5px;
}

div.collection h1 {
    	margin: 0 0 0 38px;
}

div.audio {
        background: transparent url(audio.png) no-repeat 0px 5px;
}

div.audio h1 {
    	margin: 0 0 0 33px;
}

div.video {
        background: transparent url(video.png) no-repeat 0px 5px;
}

div.video h1 {
    	margin: 0 0 0 37px;
}

div.image {
        background: transparent url(image.png) no-repeat 0px 5px;
}


div#titleContainer form {
        background: #ccccff;
        width: 95%;
        margin-top: 7px;
	padding: 15px; 
        clear: both;
        float: left;
}

div#titleContainer h3 {
        font-size: 100%;        
        padding-bottom:10px;
}

ul.globalMenu {
	float:left;
        display: inline;
        list-style-type: none;
        margin: 4px 0 0 0;
        padding-left: 0px;
}

ul.globalMenu li {
        display: inline;
        padding-right: 5px;
}


ul.lock {
	padding-top: 5px;
        margin: 0;
	float:right;
        display: inline;
        list-style-type: none;
} 

ul.lock li { 
        display: inline;
	font-size: 80%;
	padding-left: 20px;
	background: transparent url(lock.gif) no-repeat 0px 25%;
}

/* End resource title section: */


/*  Start of 'TabMenuLine' section: */

div.activeTab { 
        padding: 5px 10px 4px 15px;                   
	/* border-bottom: 1px solid #aaa; */
}

/* TabMenu1 */

ul.tabMenu1 {
       float: left;
}

ul.tabMenu1 li.navigateToParentService { 
        background: url(up.gif) no-repeat 1% 50%;
}

ul.tabMenu1 li.navigateToParentService a {
        /* Move link text 22px right (away from the icon) */
        padding-left: 22px;
}

/* TabMenu2 */

ul.tabMenu2 {
        float: right;
        padding: 2px 0 2px 0px;
}

ul.tabMenu2 li {
        margin-left:10px;
}
/* ... */

